--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.hexagon{
+    position: fixed;
+    top: -10px;
+    left: -15px;
+    right: 0;
+    bottom: 0;
+    margin: 0;
+    z-index: -1;
+    height: 100vh;
+}
