--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,12 @@
   z-index: -10;
   height: 100vh;
 }
+
+.card3d:hover .image{
+  transition: 1s;
+  transform: perspective(100px) rotateX(2deg);
+}
+.card3d:hover .stillimage{
+  transition: 1s;
+  transform: translateY(-100px);
+}
