--- a/src/index.css
+++ b/src/index.css
@@ -23,79 +23,96 @@
 }
 
 .container {
-  height: 300vh;
-  position: relative;
+    height: 300vh;
+    position: relative;
 }
 
 .container .sticky {
-  position: sticky;
-  overflow: hidden;
-  top: 0;
-  height: 100vh;
+    position: sticky;
+    overflow: hidden;
+    top: 0;
+    height: 100vh;
 }
 
 .container .sticky .el {
-  width: 100%;
-  height: 100%;
-  top: 0;
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .container .sticky .el .imageContainer {
-  position: relative;
-  width: 30vw;
-  height: 30vh;
+    position: relative;
+    width: 25vw;
+    height: 25vh;
 }
 
 .container .sticky .el .imageContainer img {
-  object-fit: cover;
+    object-fit: cover;
 }
-.container .sticky .el:nth-of-type(1) .imageContainer {
-  top: -20vh;
-  left: -5vw;
-  width: 22vw;
-  height: 30vh;
-}
+
+/* Specific styles for different nth elements */
 .container .sticky .el:nth-of-type(2) .imageContainer {
-  top: -20vh;
-  left: -35vw;
-  width: 25vw;
-  height: 35vh;
+    top: -30vh;
+    left: 5vw;
+    width: 25vw;
+    height: 10vh;
 }
+
 .container .sticky .el:nth-of-type(3) .imageContainer {
-  top: 15vh;
-  left: 35vw;
-  width: 22vw;
-  height: 40vh;
+    top: -10vh;
+    left: -25vw;
+    width: 20vw;
+    height: 45vh;
 }
 
 .container .sticky .el:nth-of-type(4) .imageContainer {
-  top:-40vh;
-  left: 30vw;
-  width: 10vw;
-  height: 10vh;
+    left: 27.5vw;
+    width: 25vw;
+    height: 25vh;
 }
 
-
 .container .sticky .el:nth-of-type(5) .imageContainer {
-  top: -30vh;
-  left: 10vw;
-  width: 22vw;
-  height: 30vh;
-}
-.container .sticky .el:nth-of-type(5) .imageContainer {
-  top: -30vh;
-  left: 10vw;
-  width: 22vw;
-  height: 30vh;
+    top: 27.5vh;
+    left: 5vw;
+    width: 20vw;
+    height: 25vh;
 }
 
 .container .sticky .el:nth-of-type(6) .imageContainer {
-  top: 25vh;
-  left: -18vw;
-  width: 10vw;
-  height: 10vh;
+    top: 27.5vh;
+    left: -22.5vw;
+    width: 30vw;
+    height: 25vh;
+}
+
+.container .sticky .el:nth-of-type(7) .imageContainer {
+    top: 22.5vh;
+    left: 25vw;
+    width: 15vw;
+    height: 15vh;
+}
+.container .sticky .el:nth-of-type(1) .imageContainer {
+  position: relative;
+  width: 45vw;
+  height: 35vh;
+  z-index: 200;
+}
+
+
+@media (max-width: 768px) { /* Adjust for tablets and smaller */
+  .container .sticky .el:nth-of-type(1) .imageContainer {
+    width: 80vw;
+    height: 25vh;
+  }
+}
+
+@media (max-width: 480px) { /* Adjust for mobile screens */
+  .container .sticky .el:nth-of-type(1) .imageContainer {
+    width: 90vw;
+    height: 20vh;
+  }
 }
