changed the home

--- a/src/index.css
+++ b/src/index.css
@@ -116,3 +116,14 @@
     height: 20vh;
   }
 }
+
+
+.roboto-serif-main {
+  font-family: "Roboto Serif", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100,
+    "GRAD" 0;
+}
